src/objects/Program__c.object
<CustomObject>
    <description>Custom Program object</description>
    <fields>
        <fullName>BrandFamilyName__c</fullName>
        <formula>Brand__r.BrandFamily__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Family Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrandName__c</fullName>
        <formula>Brand__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrandObjective__c</fullName>
        <label>Brand Objective</label>
        <picklist>
            <picklistValues>
                <fullName>Execute sampling programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Objective 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Objective 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Objective 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Objective 5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BrandQuality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Quality</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Tags__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Brand Quality</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Tags__c</referenceTo>
        <relationshipLabel>Programs (Brand Quality)</relationshipLabel>
        <relationshipName>Programs4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BrandStrategy__c</fullName>
        <label>Brand Strategy</label>
        <picklist>
            <picklistValues>
                <fullName>Drive Awareness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BrandVariety__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Variety</label>
        <referenceTo>Tags__c</referenceTo>
        <relationshipLabel>Programs (Brand Variety)</relationshipLabel>
        <relationshipName>Programs3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Brand_Logo__c</fullName>
        <formula>Brand__r.Logo__c</formula>
        <label>Brand Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Brand</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>Tags__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>PL4 Brand</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Tags__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ChannelSubType__c</fullName>
        <label>Channel Sub-Type</label>
        <picklist>
            <controllingField>Channel__c</controllingField>
            <picklistValues>
                <fullName>LFL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grocery Mass &amp; Drug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High End</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel Type</label>
        <picklist>
            <controllingField>SpendDescription__c</controllingField>
            <picklistValues>
                <fullName>Off Premise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Premise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Premise</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CreatedByName__c</fullName>
        <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
        <label>CreatedByName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DistributorName__c</fullName>
        <formula>if(OR(ISNULL(Distributor__c),ISBLANK(Distributor__c)),&apos;*No Distributor&apos;,Distributor__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distributor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DistributorQuotaDetails__c</fullName>
        <label>Distributor Quota Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Distributor</value>
            </filterItems>
            <filterItems>
                <field>Account.ProgramPartner__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.TerritoryTag__c</field>
                <operation>equals</operation>
                <valueField>$Source.Territory__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs_distributors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>(EndDate__c - StartDate__c)+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FocusType__c</fullName>
        <label>Focus Type</label>
        <picklist>
            <picklistValues>
                <fullName>#1 Priority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core Priority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Priority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Priority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cordials Kicker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Funds__c</fullName>
        <label>Funds</label>
        <picklist>
            <picklistValues>
                <fullName>EG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LMF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Focus Calendar Priority</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IOCode__c</fullName>
        <label>IO Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedByName__c</fullName>
        <formula>LastModifiedBy.FirstName + &apos; &apos; +  LastModifiedBy.LastName</formula>
        <label>LastModifiedByName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NationalAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>National Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Corporate</value>
            </filterItems>
            <filterItems>
                <field>Account.ActivelyManaged__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Programs (National Account)</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>IF( ISBLANK(Owner:User.Id), Owner:Queue.Name, Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName )</formula>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Focus Calendar Priority</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Program__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Focus Calendar Local Priority, Focus Calendar National Priority</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Related Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramFocus__c</fullName>
        <label>Program Focus</label>
        <picklist>
            <controllingField>ProgrammingType__c</controllingField>
            <picklistValues>
                <fullName>Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProgrammingType__c</fullName>
        <label>Programming Type</label>
        <picklist>
            <controllingField>SpendDescription__c</controllingField>
            <picklistValues>
                <fullName>Display</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>Incentive</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>POS</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Promotion</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Sampling</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsorship</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
                <color>#66E9BD</color>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Priority__c</fullName>
        <formula>Parent__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesStrategyDriven__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the local priority driven from Sales Strategy?</inlineHelpText>
        <label>Sales Strategy Driven</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SourceBICampaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source BI Campaign</label>
        <referenceTo>Campaign__c</referenceTo>
        <relationshipLabel>Programs</relationshipLabel>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SpendDescription__c</fullName>
        <label>Spend Description</label>
        <picklist>
            <controllingField>Funds__c</controllingField>
            <picklistValues>
                <fullName>Ad Production Costs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced TV Paid Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cinema Paid Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Giveaways</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Magazines Paid Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Newspaper Paid Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creative Agency Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Relations Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Display Paid Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freight and Storage (National POS Only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heritage Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liscensing and Royalty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Agency Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Menu Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misc. (requires comment)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Paid Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Standard Digital Units Paid Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Premise Consumer Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Premise Display Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Premise POS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Premise Sampling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Premise - Trade Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Premise Value Added Packaging (VAP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off Trade Incentive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online Video Paid Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Premise Consumer Promotion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Premise Menus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Premise POS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TerritoryName__c</fullName>
        <formula>Territory__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TerritoryValue__c</fullName>
        <label>Territory Value</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metro Ny</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montgomery County MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Territory</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Tags__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Territory</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Tags__c</referenceTo>
        <relationshipLabel>Programs (Territory)</relationshipLabel>
        <relationshipName>Programs_Territory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>YTDActual__c</fullName>
        <formula>SourceBICampaign__r.ActualCampaignSpend__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Program</label>
    <listViews>
        <fullName>All_Brand_Investment_Programs</fullName>
        <columns>NAME</columns>
        <columns>Parent__c</columns>
        <columns>TerritoryName__c</columns>
        <columns>BrandName__c</columns>
        <columns>ProgramFocus__c</columns>
        <columns>ProgrammingType__c</columns>
        <columns>Channel__c</columns>
        <columns>SpendDescription__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Program__c.Brand_Investment_Programs</value>
        </filters>
        <label>All Brand Investment Programs</label>
    </listViews>
    <listViews>
        <fullName>All_Focus_Calendar_Priorities</fullName>
        <columns>NAME</columns>
        <columns>FocusType__c</columns>
        <columns>TerritoryName__c</columns>
        <columns>BrandName__c</columns>
        <columns>ProgrammingType__c</columns>
        <columns>ProgramFocus__c</columns>
        <columns>Channel__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Program__c.National_Priority,Program__c.LocalPriority</value>
        </filters>
        <label>All Focus Calendar Priorities</label>
    </listViews>
    <listViews>
        <fullName>All_Focus_Calendar_Priorities_Programs</fullName>
        <columns>NAME</columns>
        <columns>FocusType__c</columns>
        <columns>Funds__c</columns>
        <columns>TerritoryName__c</columns>
        <columns>BrandName__c</columns>
        <columns>ProgrammingType__c</columns>
        <columns>ProgramFocus__c</columns>
        <columns>Channel__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Focus Calendar Priorities &amp; Programs</label>
    </listViews>
    <listViews>
        <fullName>All_Programs</fullName>
        <columns>NAME</columns>
        <columns>Parent__c</columns>
        <columns>Funds__c</columns>
        <columns>TerritoryName__c</columns>
        <columns>BrandName__c</columns>
        <columns>ProgramFocus__c</columns>
        <columns>ProgrammingType__c</columns>
        <columns>Channel__c</columns>
        <columns>SpendDescription__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Program__c.Brand_Investment_Programs,Program__c.EG_or_LMF_Programs</value>
        </filters>
        <label>All Programs</label>
    </listViews>
    <listViews>
        <fullName>Multibrand_Program</fullName>
        <filterScope>Queue</filterScope>
        <label>Multibrand</label>
        <queue>Multibrand</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Focus_Calendar_Priorities</fullName>
        <columns>NAME</columns>
        <columns>FocusType__c</columns>
        <columns>TerritoryName__c</columns>
        <columns>BrandName__c</columns>
        <columns>ProgrammingType__c</columns>
        <columns>ProgramFocus__c</columns>
        <columns>Channel__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Program__c.LocalPriority,Program__c.National_Priority</value>
        </filters>
        <label>My Focus Calendar Priorities</label>
    </listViews>
    <listViews>
        <fullName>My_Programs</fullName>
        <columns>NAME</columns>
        <columns>Parent__c</columns>
        <columns>Funds__c</columns>
        <columns>TerritoryName__c</columns>
        <columns>BrandName__c</columns>
        <columns>ProgramFocus__c</columns>
        <columns>ProgrammingType__c</columns>
        <columns>Channel__c</columns>
        <columns>SpendDescription__c</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Program__c.Brand_Investment_Programs,Program__c.EG_or_LMF_Programs</value>
        </filters>
        <label>My Programs</label>
    </listViews>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <recordTypes>
        <fullName>Brand_Investment_Programs</fullName>
        <active>true</active>
        <description>Programs funded by Brand Investment like Sampling, POS, Incentives, etc.</description>
        <label>Brand Investment Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>EG_or_LMF_Programs</fullName>
        <active>true</active>
        <description>EG or LMF Programs.</description>
        <label>EG or LMF Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>LocalPriority</fullName>
        <active>true</active>
        <description>All local priorities driven by Sales Strategy.</description>
        <label>Focus Calendar Local Priority</label>
    </recordTypes>
    <recordTypes>
        <fullName>National_Priority</fullName>
        <active>true</active>
        <description>All national priorities driven by Sales Strategy.</description>
        <label>Focus Calendar National Priority</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Program_Budget_Cannot_Be_Negative</fullName>
        <active>true</active>
        <description>Budget cannot be less than zero dollars.</description>
        <errorConditionFormula>Budget__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Budget__c</errorDisplayField>
        <errorMessage>Budget cannot be less than zero dollars. Please update the Budget.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Program_Date_Validation</fullName>
        <active>true</active>
        <description>Start Date of the Program must be prior or equal to End Date.</description>
        <errorConditionFormula>StartDate__c &gt; EndDate__c</errorConditionFormula>
        <errorMessage>Start Date must be prior or equal to End Date. Please update the Start or End Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Year_must_be_equal_to_End_Year</fullName>
        <active>true</active>
        <description>Program Start Date Year must be equal to End Date year.</description>
        <errorConditionFormula>Year(StartDate__c)  &lt;&gt; Year(EndDate__c)</errorConditionFormula>
        <errorMessage>Program Start Date year must be equal to End Date Year. Please update the Start or End Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sales360_Users_Cannot_Edit_BI_Prog_Name</fullName>
        <active>true</active>
        <description>Since sales360 user have edit rights to Programs, they are able to edit Program Name of BI Programs by default. This rule will prevent a sales360 user from editing a BI Program Name.</description>
        <errorConditionFormula>AND( 
OR( 
ISCHANGED(Name))&amp;&amp; 
(OR( 
$Profile.Name = &quot;Operations, Admins and Reps&quot;, 
$Profile.Name = &quot;Sales Strategy&quot;, 
$Profile.Name = &quot;Advocacy&quot;) 
))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You cannot edit the name of a Brand Investment Program.</errorMessage>
    </validationRules>
</CustomObject>